--- a/RRT_2/mainwindow.ui
+++ b/RRT_2/mainwindow.ui
@@ -14,17 +14,26 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>220</x>
-      <y>100</y>
-      <width>141</width>
-      <height>61</height>
+      <x>120</x>
+      <y>20</y>
+      <width>101</width>
+      <height>151</height>
      </rect>
     </property>
+    <property name="maximumSize">
+     <size>
+      <width>371</width>
+      <height>16777215</height>
+     </size>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">image:url(:/new/prefix2/images.jpg)</string>
+    </property>
     <property name="text">
-     <string/>
+     <string> </string>
     </property>
    </widget>
   </widget>
