--- a/RRT_2/resourceIMG.qrc
+++ b/RRT_2/resourceIMG.qrc
@@ -1,3 +1,6 @@
 <RCC>
     <qresource prefix="/new/prefix1"/>
+    <qresource prefix="/new/prefix2">
+        <file>images.jpg</file>
+    </qresource>
 </RCC>
