--- a/RRT_2/mainwindow.ui
+++ b/RRT_2/mainwindow.ui
@@ -14,26 +14,20 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLabel" name="label_2">
+   <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>20</y>
-      <width>101</width>
-      <height>151</height>
+      <x>20</x>
+      <y>70</y>
+      <width>461</width>
+      <height>131</height>
      </rect>
     </property>
-    <property name="maximumSize">
-     <size>
-      <width>371</width>
-      <height>16777215</height>
-     </size>
-    </property>
     <property name="styleSheet">
-     <string notr="true">image:url(:/new/prefix2/images.jpg)</string>
+     <string notr="true">image: url(:/new/prefix2/images.jpg)</string>
     </property>
     <property name="text">
-     <string> </string>
+     <string/>
     </property>
    </widget>
   </widget>
