--- a/RRT_2/resourceIMG.qrc
+++ b/RRT_2/resourceIMG.qrc
@@ -1,6 +1,7 @@
 <RCC>
-    <qresource prefix="/new/prefix1"/>
     <qresource prefix="/new/prefix2">
         <file>images.jpg</file>
+        <file>back4.jpg</file>
+        <file>bricks.png</file>
     </qresource>
 </RCC>
