--- a/RRT_2/mainwindow.ui
+++ b/RRT_2/mainwindow.ui
@@ -17,11 +17,44 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>220</x>
-      <y>100</y>
-      <width>141</width>
-      <height>61</height>
+      <x>110</x>
+      <y>50</y>
+      <width>41</width>
+      <height>51</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">image: url(:/new/prefix2/images.jpg)</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QGraphicsView" name="graphicsView">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>30</y>
+      <width>321</width>
+      <height>281</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">image :url(:/new/prefix2/images.jpg)</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>100</x>
+      <y>50</y>
+      <width>121</width>
+      <height>111</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">image : url(:/new/prefix2/enemy1.png)
+</string>
     </property>
     <property name="text">
      <string/>
