--- a/RRT_2/resourceIMG.qrc
+++ b/RRT_2/resourceIMG.qrc
@@ -1,3 +1,10 @@
 <RCC>
-    <qresource prefix="/new/prefix1"/>
+    <qresource prefix="/new/prefix2">
+        <file>images.jpg</file>
+        <file>back4.jpg</file>
+        <file>bricks.png</file>
+        <file>enemyA.png</file>
+        <file>enemy1.png</file>
+        <file>EnemyB.jpg</file>
+    </qresource>
 </RCC>
